--- a/ayojan.html
+++ b/ayojan.html
@@ -44,16 +44,15 @@
                                             About
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px">
-                                            <li class="fw-bold px-3">हमारी पवित्र यात्रा का अन्वेषण करें</li>
+                                            <li class="fw-bold px-3">Explore our sacred journey</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./parichay.html#1">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
-                                                            </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -64,7 +63,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Founder
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -75,7 +74,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Our Mission
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -88,7 +87,7 @@
                                             Temple
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px; background: #ffffff;">
-                                            <li class="fw-bold px-3">हमारे पवित्र मंदिर और दिव्य अनुष्ठान को जानें</li>
+                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./mandir.html#1">
                                                     <div class="d-flex">
@@ -97,7 +96,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">History
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -108,7 +107,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Activites
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -119,7 +118,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Schedule
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -130,7 +129,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Gallery
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -379,9 +378,9 @@
                                                 thousand devotees gather to receive blessings. This festival also
                                                 witnesses the presence of several renowned </p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"><a class="my-link"
-                                                href="./events/krupa-mahotsav.html">Know More</a>
-                                        </button>
+                                        <a class="my-link btn mb-2 py-2" href="./events/krupa-mahotsav.html"
+                                            style="background-color: #F93; color: #fff;"> Know More
+                                        </a>
                                     </div>
 
                                 </div>
@@ -399,8 +398,9 @@
                                                 power, and benevolence are revered. Celebrated on the 13th night of the
                                                 Krishna Paksha of the month of Magha</p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"><a class="my-link"
-                                                href="./events/maha-shivratri.html">Know More</a></button>
+                                        <a class="my-link btn mb-2 py-2" href="./events/maha-shivratri.html"
+                                            style="background-color: #F93; color: #fff;"> Know More
+                                        </a>
                                     </div>
 
                                 </div>
@@ -418,8 +418,9 @@
                                                 festival revolves around the worship of the seven main forms of Goddess
                                                 Durga, with the five </p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"><a class="my-link"
-                                                href="./events/nav-ratri.html">Know More</a></button>
+                                        <a class="my-link btn mb-2 py-2" href="./events/nav-ratri.html"
+                                            style="background-color: #F93; color: #fff;"> Know More
+                                        </a>
                                     </div>
 
                                 </div>
@@ -516,9 +517,10 @@
                                                 आते
                                                 हैं। </p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            ><a href="./events/krupa-mahotsav.html" class="my-link">अधिक
-                                                जानें</a>     </button>
+                                        <a class="my-link btn mb-2 py-2" href="./events/krupa-mahotsav.html"
+                                            style="background-color: #F93; color: #fff;">अधिक
+                                            जानें
+                                        </a>
                                     </div>
 
                                 </div>
@@ -536,9 +538,10 @@
                                                 के कृष्ण पक्ष की त्रयोदशी को महाशिवरात्रि कहा जाता है, जिसे विभिन्न
                                                 भागों में भारत में विशेष धूमधाम से मनाया जाता है।</p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            ><a href="./events/maha-shivratri.html" class="my-link">अधिक
-                                                जानें</a> </button>
+                                        <a class="my-link btn mb-2 py-2" href="./events/maha-shivratri.html"
+                                            style="background-color: #F93; color: #fff;">अधिक
+                                            जानें
+                                        </a>
                                     </div>
 
                                 </div>
@@ -557,11 +560,11 @@
                                                 हैं। नवरात्रि का इतिहास, संदेश और अर्थ से भरा हुआ है जो आत्मा की
                                                 उद्दीपना करता है। </p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            ><a href="./events/nav-ratri.html" class="my-link">अधिक
-                                                जानें</a> </button>
+                                        <a class="my-link btn mb-2 py-2" href="./events/nav-ratri.html"
+                                            style="background-color: #F93; color: #fff;">अधिक
+                                            जानें
+                                        </a>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
