--- a/daan.html
+++ b/daan.html
@@ -17,10 +17,10 @@
                 <nav class="navbar navbar-expand-xl">
                     <div class="container">
                         <a class="navbar-brand d-flex my-2 daan-logo align-items-center" href="./index.html">
-                            <img src="./assets/images/logo-2.png" width="60" height="55">
-                            <div class="logo-text-container ms-1 ms-sm-2">
-                                <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">म.श.च.ट ,प्रयागराज</h1>
-                                <h2 style="font-weight: 300; margin-top: 3px;">Maa Sheetla <br
+                            <img src="./assets/images/logo.png" alt="Bootstrap" width="60" height="55">
+                            <div class="logo-text-container">
+                                <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">Prayagraj</h1>
+                                <h2 style="font-weight: 300; margin-top: 3px; font-size: 15px;">Maa Sheetla <br
                                         class="d-block d-sm-none" />Charitable Trust</h2>
                             </div>
                         </a>
@@ -44,16 +44,15 @@
                                             About
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px">
-                                            <li class="fw-bold px-3">हमारी पवित्र यात्रा का अन्वेषण करें</li>
+                                            <li class="fw-bold px-3">Explore our sacred journey</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./parichay.html#1">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
-                                                            </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -64,7 +63,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Founder
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -75,7 +74,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Our Mission
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -88,7 +87,7 @@
                                             Temple
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px; background: #ffffff;">
-                                            <li class="fw-bold px-3">हमारे पवित्र मंदिर और दिव्य अनुष्ठान को जानें</li>
+                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./mandir.html#1">
                                                     <div class="d-flex">
@@ -97,7 +96,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">History
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -108,7 +107,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Activites
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -119,7 +118,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Schedule
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -130,7 +129,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Gallery
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
