--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                             About
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px">
-                                            <li class="fw-bold px-3">हमारी पवित्र यात्रा का अन्वेषण करें</li>
+                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./parichay.html#1">
                                                     <div class="d-flex">
@@ -95,7 +95,7 @@
                                             Temple
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px; background: #ffffff;">
-                                            <li class="fw-bold px-3">हमारे पवित्र मंदिर और दिव्य अनुष्ठान को जानें</li>
+                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./mandir.html#1">
                                                     <div class="d-flex">
@@ -108,7 +108,7 @@
                                                         </div>
                                                     </div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="./mandir.html#2">
+                                            <li><a class="dropdown-item" href="./mandir.html#3">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
@@ -119,7 +119,7 @@
                                                         </div>
                                                     </div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="./mandir.html#3">
+                                            <li><a class="dropdown-item" href="./mandir.html#2">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
