--- a/mandir.html
+++ b/mandir.html
@@ -44,16 +44,15 @@
                                             About
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px">
-                                            <li class="fw-bold px-3">हमारी पवित्र यात्रा का अन्वेषण करें</li>
+                                            <li class="fw-bold px-3">Explore our sacred journey</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./parichay.html#1">
                                                     <div class="d-flex">
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us
-                                                            </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -64,7 +63,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Founder
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -75,7 +74,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Our Mission
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
