--- a/parichay.html
+++ b/parichay.html
@@ -44,7 +44,7 @@
                                             About
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px">
-                                            <li class="fw-bold px-3">हमारी पवित्र यात्रा का अन्वेषण करें</li>
+                                            <li class="fw-bold px-3">Explore our sacred journey</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./parichay.html#1" onclick="changeDiv(1)">
                                                     <div class="d-flex">
@@ -52,7 +52,7 @@
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -63,7 +63,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Founder
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -74,7 +74,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Our Mission
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -87,7 +87,7 @@
                                             Temple
                                         </a>
                                         <ul class="dropdown-menu" style="width:240px; background: #ffffff;">
-                                            <li class="fw-bold px-3">हमारे पवित्र मंदिर और दिव्य अनुष्ठान को जानें</li>
+                                            <li class="fw-bold px-3">Discover our sacred temple and divine rituals</li>
                                             <hr class="dropdown-divider">
                                             <li><a class="dropdown-item" href="./mandir.html#1">
                                                     <div class="d-flex">
@@ -96,18 +96,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">History
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
-                                                        </div>
-                                                    </div>
-                                                </a></li>
-                                            <li><a class="dropdown-item" href="./mandir.html#2">
-                                                    <div class="d-flex">
-                                                        <img src="./assets/images/modal.png" width="30" height="30"
-                                                            class="me-2" />
-                                                        <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">Activites
-                                                            </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -116,9 +105,20 @@
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">Activites
+                                                            </h5>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
+                                                        </div>
+                                                    </div>
+                                                </a></li>
+                                            <li><a class="dropdown-item" href="./mandir.html#2">
+                                                    <div class="d-flex">
+                                                        <img src="./assets/images/modal.png" width="30" height="30"
+                                                            class="me-2" />
+                                                        <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Schedule
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -129,7 +129,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Gallery
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
